--- a/formStyle.css
+++ b/formStyle.css
@@ -31,9 +31,9 @@ form h2 {
     margin: 0 0 2rem 0;
     text-align: center;
 }
-#warning-msg {
+form .warning-msg {
     margin: 0.25rem 0 0 0.2rem;
-    font-size: 0.85em;
+    font-size: 0.75em;
     color: red;
 }
 form .field {
@@ -103,8 +103,7 @@ form div[id] label input {
     padding: 0.6em 0;
     font-size: 1em;
     border-radius: 0.15em;
-    margin: 2em 0 0 0;
-        
+    margin: 1em 0 0 0;       
 }
 
 @media only screen and (max-width: 1300px) {
